--- a/hw01-html/clone2.html
+++ b/hw01-html/clone2.html
@@ -6,8 +6,13 @@
 	<title>Document</title>
 
 	<style>
+		body {
+			font-family: sans-serif;
+		}
+
 		h1 {
 			text-align: center;
+			font-style: italic;
 		}
 
 		img {
