--- a/tasks/hw03/task5/index.html
+++ b/tasks/hw03/task5/index.html
@@ -1,44 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>hw3.5</title>
-
-	<style>
-		table, th, td {
-  			border: 1px solid black;
-  			border-collapse: collapse;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Planet Table</title>
+    <link rel="stylesheet" href="./planet-table.css">
 </head>
 <body>
-	<table>
-		<thead>
-			<tr>
-				<th></th>
-				<th>Name</th>
-				<th>Mass</th>
-				<th>Diameter</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Terrestial planets</td>
-				<td>
-				<tr>
-					<td>Mercury</td>
-					<td>0.33</td>
-					<td>4879</td>
-				</tr>
-				<tr>
-					<td>Venus</td>
-					<td>4.87</td>
-					<td>12104</td>
-				</tr>
-				</td>
-			</tr>
-		</tbody>
-	</table>
+    <table>
+        <caption>Data about the planets of our solar system</caption>
+        <thead>
+            <tr>
+                <th colspan="2"></th>
+                <th>Name</th>
+                <th>Mass<br>(10<span class="super">24</span>kg)</th>
+                <th>Diameter<br>(km)</th>
+                <th>Dencity<br>(kg/m<sup class="smaller">3</sup>)</th>
+                <th>Gravity<br>(m/s<sup class="smaller">2</sup>)</th>
+                <th>Length<br>of day<br>(hours)</th>
+                <th>Distance<br>from Sun<br>(10<span class="super">6</span>km)</th>
+                <th>Mean<br>temperature<br>(&deg;C)</th>
+                <th>Number<br>of moons</th>
+                <th>Notes</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th rowspan="4" colspan="2">Terrestrial</th>
+                <th>Mercury</th>
+                <td>0.330</td>
+                <td>4,879</td>
+                <td>5427</td>
+                <td>3.7</td>
+                <td>4222.6</td>
+                <td>57.9</td>
+                <td>167</td>
+                <td>0</td>
+                <td>Closest to the Sun</td>
+            </tr>
+            <tr>
+                <th>Venus</th>
+                <td>4.87</td>
+                <td>12,104</td>
+                <td>5243</td>
+                <td>8.9</td>
+                <td>2802.0</td>
+                <td>108.2</td>
+                <td>464</td>
+                <td>0</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Earth</th>
+                <td>5.97</td>
+                <td>12,756</td>
+                <td>5514</td>
+                <td>9.8</td>
+                <td>24.0</td>
+                <td>149.6</td>
+                <td>15</td>
+                <td>1</td>
+                <td>Our world</td>
+            </tr>
+            <tr>
+                <th>Mars</th>
+                <td>0.642</td>
+                <td>6,792</td>
+                <td>3933</td>
+                <td>3.7</td>
+                <td>24.7</td>
+                <td>227.9</td>
+                <td>-65</td>
+                <td>2</td>
+                <td>The red planet</td>
+            </tr>
+            <tr>
+                <th rowspan=4>Jovian<br>planets</th>
+                <th rowspan=2>Gas<br>giants</th>
+                <th>Jupiter</th>
+                <td>1898</td>
+                <td>142,984</td>
+                <td>1326</td>
+                <td>23.1</td>
+                <td>9.9</td>
+                <td>778.6</td>
+                <td>-110</td>
+                <td>67</td>
+                <td>The largest planet</td>
+            </tr>
+            <tr>
+                <th>Saturn</th>
+                <td>568</td>
+                <td>120,536</td>
+                <td>687</td>
+                <td>9.0</td>
+                <td>10.7</td>
+                <td>1433.5</td>
+                <td>-140</td>
+                <td>62</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th rowspan="2">Ice<br>Giants</th>
+                <th>Uranus</th>
+                <td>86.8</td>
+                <td>51,118</td>
+                <td>1271</td>
+                <td>8.7</td>
+                <td>17.2</td>
+                <td>2872.5</td>
+                <td>-195</td>
+                <td>27</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Neptune</th>
+                <td>102</td>
+                <td>49,528</td>
+                <td>16.38</td>
+                <td>11.0</td>
+                <td>16.1</td>
+                <td>4495.1</td>
+                <td>-200</td>
+                <td>14</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th colspan="2">Dwarf planets</th>
+                <th>Pluto</th>
+                <td>0.0146</td>
+                <td>2,370</td>
+                <td>2095</td>
+                <td>0.7</td>
+                <td>153.3</td>
+                <td>5906.4</td>
+                <td>-225</td>
+                <td>5</td>
+                <td>Declassified as a planet in 2006</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
